test/library/standard/Memory/Initialization/moveNothing.chpl
use Memory.Initialization;

var n1, n2: nothing;
var i: int;

moveInitialize(n1, n2);

moveInitialize(n1, i);

writeln("Got to end");
